@@ -1,6 +1,8 @@
 package earth.terrarium.athena.api.client.models;
 
 import earth.terrarium.athena.api.client.utils.CtmUtils;
+import earth.terrarium.athena.impl.client.models.ctm.ConnectedTextureMap;
+import net.minecraft.core.Direction;
 import net.minecraft.world.level.block.Rotation;
 
 public record AthenaQuad(int sprite, float left, float right, float top, float bottom, Rotation rotation, float depth, boolean cull) {
@@ -15,6 +17,11 @@ public record AthenaQuad(int sprite, float left, float right, float top, float b
 
     public static AthenaQuad withRotation(int sprite, Rotation rotation) {
         return new AthenaQuad(sprite, 0, 1, 1, 0, rotation, 0f);
+    }
+
+    public static AthenaQuad withState(ConnectedTextureMap map, Direction direction, boolean first, boolean second, boolean firstSecond, float left, float right, float top, float bottom) {
+        final int texture = map.getTexture(direction, CtmUtils.getTexture(first, second, firstSecond));
+        return new AthenaQuad(texture, left, right, top, bottom, Rotation.NONE, 0f);
     }
 
     public static AthenaQuad withState(boolean first, boolean second, boolean firstSecond, float left, float right, float top, float bottom) {
