@@ -7,7 +7,9 @@ import earth.terrarium.athena.api.client.models.AthenaQuad;
 import earth.terrarium.athena.api.client.utils.CtmState;
 import earth.terrarium.athena.api.client.utils.CtmUtils;
 import earth.terrarium.athena.api.client.utils.AthenaUtils;
+import it.unimi.dsi.fastutil.ints.Int2ObjectArrayMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
+import net.minecraft.client.renderer.texture.TextureAtlasSprite;
 import net.minecraft.client.resources.model.Material;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
@@ -18,17 +20,20 @@ import net.minecraft.world.level.block.state.BlockState;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.function.Function;
 import java.util.function.Supplier;
 
-public class PaneConnectedBlockModel extends ConnectedBlockModel {
+public class PaneConnectedBlockModel implements AthenaBlockModel {
 
     public static final AthenaModelFactory FACTORY = new Factory();
 
     private static final List<AthenaQuad> CENTER = List.of(new AthenaQuad(1, 0, 1, 1, 0, Rotation.NONE, 0.4375f));
     private static final List<AthenaQuad> MIDDLE = List.of(new AthenaQuad(6, 0.4375f, 0.5625f, 1f, 0f, Rotation.NONE, 0.4375f));
 
+    private final Int2ObjectMap<Material> materials;
+
     public PaneConnectedBlockModel(Int2ObjectMap<Material> materials) {
-        super(materials);
+        this.materials = materials;
     }
 
     @Override
@@ -67,6 +72,15 @@ public class PaneConnectedBlockModel extends ConnectedBlockModel {
             return MIDDLE;
         }
         return List.of();
+    }
+
+    @Override
+    public Int2ObjectMap<TextureAtlasSprite> getTextures(Function<Material, TextureAtlasSprite> getter) {
+        final var textures = new Int2ObjectArrayMap<TextureAtlasSprite>();
+        for (var entry : this.materials.int2ObjectEntrySet()) {
+            textures.put(entry.getIntKey(), getter.apply(entry.getValue()));
+        }
+        return textures;
     }
 
     private static final AthenaQuad TOP_MIDDLE = new AthenaQuad(5, 0.4375f, 0.5625f, 0.5625f, 0.4375f, Rotation.NONE, 0f, false);
