@@ -6,7 +6,7 @@ enabled_platforms=fabric,forge
 archives_base_name=athena
 mod_id=athena
 github_name=Athena
-mod_version=2.0.0
+mod_version=2.0.1
 maven_group=earth.terrarium.athena
 
 modrinth_id=b1ZV3DIJ
